# variantFormatter

./: INSTALLATION.md  MANUAL.md  README.md  REQUIREMENTS.txt  pyproject.toml  setup.py
VariantFormatter/: __init__.py  formatter.py  gapGenes.py  hgvs2vcf.py  setup  simpleVariantFormatter.py  supportedChromosomeBuilds.py  variantformatter.py
VariantFormatter/test/: add_new_test_GRCh37.py  add_new_test_GRCh38.py  inputVariants.txt  newVariants.txt  test_inputs_auto.py
VariantFormatter/variantanalyser/: __init__.py  functions.py  supportFunctions.py
test/: add_new_test_GRCh37.py  test_inputs_auto.py
variantFormatter/: __init__.py  formatter.py  gapGenes.py  hgvs2vcf.py  liftover.py  setup  simpleVariantFormatter.py  supportFunctions.py  supportedChromosomeBuilds.py  variantformatter.py
variantFormatter/configuration/: __init__.py  config.ini
variantFormatter/test/: inputVariants.txt  test_inputs_auto.py
variantFormatter/variantanalyser/: __init__.py  functions.py
