[project]
name = "VariantFormatter"
dynamic = ["version"]
description = "Accurate conversion of Pseudo VCF variants into the HGVS format and mapping between reference sequences"
license = {file = "LICENSE.txt"}
authors = [{name = "VariantValidator Contributors", email = "admin@variantvalidator.org"}]
readme = "README.md"
keywords = ["bioinformatics",
        "computational biology",
        "genome variants",
        "genome variation",
        "genomic variants",
        "genomic variation",
        "genomics",
        "hgvs",
        "HGVS",
        "sequencevariants"
]

requires-python = ">=3.6"

dependencies = []

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: AGPL-3.0",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
"Homepage" = "https://variantvalidator.org/"
"Source" = "https://github.com/openvar/variantFormatter"
"Bug Reports" = "https://github.com/openvar/variantValidator/issues"
"Say Thanks!" = "https://www.buymeacoffee.com/VariantValidatr"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the 'root' directory
include = ["VariantFormatter*"]  # Match package names starting with "VariantFormatter"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
